--- a/style/style.css
+++ b/style/style.css
@@ -38,7 +38,7 @@ nav ul li a{
     font-weight: 600;
 }
 /* Button Style */
-.btn{
+.banner-btn{
     position: static;
     background-color: #0D1321;
     color: #FFFFFF;
@@ -53,8 +53,6 @@ nav ul li a{
     justify-content: center;
     align-items: center;
     margin-left: 800px;
-
-    
 }
 /* Banner Styles */
 .banner{
@@ -93,6 +91,18 @@ nav ul li a{
     margin-left: 800px;
 }
 /* Section style */
+.section{
+    background-color: #FFFFFF;
+    width: 2000px;
+    height: 336px;
+    border-radius: 16px;
+    max-width: 80%;
+    margin: 0 auto;
+}
+.section-div{
+    margin-top: 141px;
+    margin-bottom: 56px;
+}
 .section-title{
     color: rgb(13, 19, 33);
     font-family: Azeret Mono;
@@ -110,4 +120,40 @@ nav ul li a{
     line-height: 26px;
     letter-spacing: 0%;
     text-align: center;
+}
+/* Resume Section Style */
+.resume{
+    display: flex;
+    justify-content: space-around;
+}
+.resume-column{
+    width: 477px;
+    height: 219px;
+}
+.resume-column-title{
+    color: rgba(13, 19, 33, 0.7);
+    font-family: Azeret Mono;
+    font-size: 24px;
+    font-weight: 700;
+    line-height: 36px;
+    letter-spacing: 0%;
+    text-align: left;
+}
+.resume-column-description{
+    color: rgb(13, 19, 33);
+    font-family: Azeret Mono;
+    font-size: 16px;
+    font-weight: 400;
+    line-height: 26px;
+    letter-spacing: 0%;
+    text-align: left;
+}
+.resume-btn{
+    color: rgb(13, 19, 33);
+font-family: Azeret Mono;
+font-size: 20px;
+font-weight: 600;
+line-height: 23px;
+letter-spacing: 0%;
+text-align: center;
 }
