--- a/style/style.css
+++ b/style/style.css
@@ -52,7 +52,7 @@ nav ul li a{
     flex-direction: row;
     justify-content: center;
     align-items: center;
-    margin-left: 800px;
+    margin: 0 auto;
 }
 /* Banner Styles */
 .banner{
@@ -88,7 +88,7 @@ nav ul li a{
     display: flex;
     flex-direction: column;
     align-items: center;
-    margin-left: 800px;
+    margin: 0 auto;
 }
 /* Section style */
 .section{
@@ -123,8 +123,10 @@ nav ul li a{
 }
 /* Resume Section Style */
 .resume{
+    background-color: #FFFFFF;
     display: flex;
     justify-content: space-around;
+    padding: 50px 80px;
 }
 .resume-column{
     width: 477px;
@@ -149,7 +151,7 @@ nav ul li a{
     text-align: left;
 }
 .resume-btn{
-    color: rgb(13, 19, 33);
+color: rgb(13, 19, 33);
 font-family: Azeret Mono;
 font-size: 20px;
 font-weight: 600;
